# danom

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  danom.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.doctrees/: danom.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: codspeed.yml  publish.yaml
_sources/: danom.rst.txt  index.rst.txt  modules.rst.txt
dev_tools/: update_cov.py  update_readme.py
docs/: Makefile
docs/source/: conf.py
src/danom/: __init__.py  _either.py  _err.py  _new_type.py  _ok.py  _result.py  _safe.py  _stream.py  _utils.py  err.py  ok.py  result.py  safe.py
tests/: conftest.py  test_api.py  test_benchmarks.py  test_either.py  test_err.py  test_monad_laws.py  test_new_type.py  test_ok.py  test_result.py  test_safe.py  test_stream.py  test_utils.py
