[project]
name = "danom"
version = "0.4.0"
description = "Functional streams and monads"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4.0",
]

[project.scripts]
danom = "danom:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.148.2",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "repo-mapper-rs>=0.3.0",
    "ruff>=0.14.6",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
